# mcp-test-driver

./: .editorconfig  .gitignore  AGENTS.md  HANDOFF.md  README.md  ROADMAP.md  TASKS.md  TODO.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
docs/: future-zero-dependency.md  mcp-spec-notes.md  security-model.md
mcp_test_driver/: cli.py  color.py  completion.py  parse.py  protocol.py  repl.py  transport.py
src/mcp_test_driver/: __init__.py  __main__.py  cli.py  color.py  completion.py  handlers.py  parse.py  protocol.py  repl.py  transport.py
tests/: __init__.py  test_cli.py  test_color.py  test_completion.py  test_handlers.py  test_parse.py  test_protocol.py  test_repl.py  test_security.py  test_transport.py
